<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image11"
    tools:context=".Register">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="519dp"

        android:background="@drawable/registerbackground"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:focusable="true"
            android:fontFamily="@font/audiowide"
            android:text="@string/Register"
            android:textColor="@color/black"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@drawable/buttonback"
            android:drawableEnd="@drawable/name"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editemailid"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/buttonback"
            android:drawableEnd="@android:drawable/sym_action_email"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/password"
            android:background="@drawable/buttonback"
            android:drawableEnd="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/spinner" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/registerinfo"
            android:text="@string/Register"
            android:textColor="#F6EEEE"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/material_on_primary_disabled"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/logingo"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>