<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <ScrollView
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="70dp"
                    android:orientation="horizontal"
                    android:background="@drawable/roundcorners"
                    android:padding="10dp"
                    android:id="@+id/reminderaddbutton"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="120dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/second"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/reminders"
                            android:textSize="35sp" />

                        <TextView
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:text="@string/remindes"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@drawable/reminders"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notesaddbutton"
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="right"
                    android:background="@drawable/remindersfile"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="130dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personallog"
                            android:textSize="35sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:text="@string/notesdes"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:src="@drawable/notes"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/groceries"
                    android:clickable="true"
                    android:id="@+id/groceriesaddbutton"
                    android:padding="10dp">
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="130dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Groceries"
                            android:textSize="35sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="Manage You daily groceries here"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:src="@drawable/cart"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:background="@drawable/bills"
                    android:layout_gravity="right"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:id="@+id/billsaddbutton"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="130dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Bills"
                            android:textColor="@color/white"
                            android:textSize="35sp"/>
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="Manage Your Bills here"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:src="@drawable/money"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/homeappliances"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:id="@+id/homeappliances"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="130dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Home Appliances"
                            android:textColor="@color/white"
                            android:textSize="35sp"/>
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="Manage Your Appliances"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="25dp"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="80dp" />
                </LinearLayout>




            </LinearLayout>


        </ScrollView>




    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/user"/>


        <TextView
            android:id="@+id/changename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="130dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:text="name"/>
        <TextView
            android:id="@+id/changemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginTop="180dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/white" />
    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>